# kvviz

./: .gitignore  LICENSE  README.md  pyproject.toml
kvviz/: __init__.py  cli.py  dashboard.html  dashboard.py  estimator.py  frag_dashboard.html  frag_dashboard.py  report.py  schema.py  synth.py  tracker.py  utils.py
kvviz/fragmentation/: __init__.py  allocator.py  collector.py  cuda_stats.py  metrics.py  report.py  schema.py  simulation.py  traffic.py
scripts/: demo.ps1  demo.sh
tests/: test_collector.py  test_cuda_stats.py  test_estimator.py  test_frag_dashboard.py  test_fragmentation.py  test_report.py  test_synth.py  test_tracker.py
