[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvviz"
version = "0.2.0"
description = "KV Cache Visualizer - live monitoring and visualization of transformer KV cache memory during inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
torch = ["torch>=2.0"]
hf = ["torch>=2.0", "transformers>=4.36"]
dashboard = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "websockets>=11.0"]
vllm = ["vllm>=0.4", "torch>=2.0"]

[project.scripts]
kvviz = "kvviz.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvviz*"]

[tool.setuptools.package-data]
kvviz = ["dashboard.html", "frag_dashboard.html"]
